test/src/e2e_vm_tests/test_programs/should_pass/language/comp_time_constants/src/main.sw
script;

fn main() -> u32 {

    return 6u32;
}
