test/src/e2e_vm_tests/test_programs/should_fail/associated_type_abi/src/main.sw
script;

abi TypeAbi {
    type T;
}

fn main() -> u32 {
  0
}
